--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 /* 
-    Author: Vijay Thapa;
+    Author: Yashraj Gohil;
     Theme: Restaurant Food Order;
     version: 1.0;
 */
@@ -84,6 +84,15 @@ fieldset{
     margin: 5%;
     padding: 3%;
     border-radius: 5px;
+}
+
+.error{
+    padding: 2%;
+    color: red;
+}
+.success{
+    padding: 2%;
+    color: green;
 }
 
 
